--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "id3js": "^1.1.3",
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
     "koa-generic-session": "^1.11.6",
     "koa-router": "^7.2.1",
     "koa-session-mongoose": "^1.0.0",
     "mongoose": "^4.11.0",
+    "node-id3": "^0.1.0",
     "winston": "^2.3.1"
   }
 }
