--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
   "name": "cloudpolis-koa",
   "version": "1.0.0",
-  "description": "",
+  "private": true,
+  "author": "altarit",
+  "license": "MIT",
   "main": "cloudpolis.js",
   "scripts": {
-    "start": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "cross-env NODE_PATH=. cross-env NODE_ENV=development node cloudpolis.js",
+    "start:prod": "cross-env NODE_PATH=. cross-env NODE_ENV=production node cloudpolis.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "cross-env": "^5.2.0",
     "id3js": "^1.1.3",
     "jsonschema": "^1.2.4",
-    "jsonwebtoken": "^8.1.0",
-    "koa": "^2.3.0",
-    "koa-bodyparser": "^4.2.0",
+    "jsonwebtoken": "^8.3.0",
+    "koa": "^2.5.3",
+    "koa-bodyparser": "^4.2.1",
     "koa-generic-session": "^2.0.1",
-    "koa-router": "^7.2.1",
+    "koa-router": "^7.4.0",
     "koa-session-mongoose": "^2.0.5",
-    "mongoose": "^5.0.0-rc1",
-    "node-id3": "^0.1.0",
+    "mongoose": "^5.2.17",
+    "node-id3": "^0.1.6",
     "winston": "^3.1.0"
   }
 }
