--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "cross-env": "^5.2.0",
+    "drivelist": "^6.4.3",
     "id3js": "^1.1.3",
     "jsonschema": "^1.2.4",
     "jsonwebtoken": "^8.3.0",
