--- a/config/nginx.dev.conf
+++ b/config/nginx.dev.conf
@@ -1,65 +1,76 @@
-#user  nobody;
-worker_processes  4;
-
-error_log  /var/logs/nginx/error.log;
-#error_log  logs/error.log  notice;
-#error_log  logs/error.log  info;
-
-#pid        logs/nginx.pid;
+#user www-data;
+worker_processes auto;
+pid /run/nginx.pid;
+include /etc/nginx/modules-enabled/*.conf;
 
 events {
-    worker_connections  1024;
+        worker_connections 768;
+        # multi_accept on;
 }
 
 http {
-    include       mime.types;
-    default_type  application/octet-stream;
 
-    #access_log  logs/access.log  main;
+        ##
+        # Basic Settings
+        ##
 
-    sendfile        on;
+        sendfile on;
+        tcp_nopush on;
+        tcp_nodelay on;
+        keepalive_timeout 65;
+        types_hash_max_size 2048;
+        # server_tokens off;
 
-    keepalive_timeout  120;
+        # server_names_hash_bucket_size 64;
+        # server_name_in_redirect off;
 
-    server {
-        listen      80;
-        server_name  localhost;
+        include /etc/nginx/mime.types;
+        default_type application/octet-stream;
 
-        gzip            on;
-        gzip_min_length 2000;
-        gzip_comp_level 5;
-        gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/javascript;
+        ##
+        # SSL Settings
+        ##
 
-        client_max_body_size 2m;
+        ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # Dropping SSLv3, ref: POODLE
+        ssl_prefer_server_ciphers on;
 
-        #charset koi8-r;
+        ##
+        # Logging Settings
+        ##
 
-        #access_log  logs/host.access.log  main;
+        access_log /var/log/nginx/access.log;
+        error_log /var/log/nginx/error.log;
 
-        location /api/ {
-            proxy_pass http://localhost:3002;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
+        ##
+        # Gzip Settings
+        ##
+
+        gzip on;
+        gzip_disable "msie6";
+
+        # gzip_vary on;
+        # gzip_proxied any;
+        # gzip_comp_level 6;
+        # gzip_buffers 16 8k;
+        # gzip_http_version 1.1;
+        # gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+
+        ##
+        # Virtual Host Configs
+        ##
+
+        server {
+
+
+                listen 80;
+                listen [::]:80;
+
+                location /files/music/ {
+                        alias /docs/music/;
+                        #try_files $uri $uri/ /index.html =404;
+                }
         }
 
-        location /assets/img/ {
-            root C:/Dev/cloudpolis/webpack/dist/;
-            try_files $uri $uri.png $uri.jpg;
-        }
-
-        location / {
-            #root C:/Dev/cloudpolis/webpack/dist/;
-            root /data/music/;
-            #try_files $uri /index.html;
-        }
-
-        # redirect server error pages to the static page /50x.html
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   html;
-        }
-    }
+        #include /etc/nginx/conf.d/*.conf;
+        #include /etc/nginx/sites-enabled/*;
 }
