--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,24 +4,27 @@ services:
   mongo:
     image: mongo:3.6
     container_name: database
-    #environment:
-    #  - MONGO_INITDB_ROOT_USERNAME=root
-    ##  - MONGO_INITDB_ROOT_PASSWORD=password
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=user
+      - MONGO_INITDB_ROOT_PASSWORD=password
     volumes:
       - "mongodata:/data/db"
+      #- "./config/mongo-entrypoint/:/docker-entrypoint-initdb.d/"
     ports:
-      - 27117:27017
+      - "2017:27017"
+    command: mongod
 
   nginx:
     image: nginx:1.15.4
-    #container_name: static
+    container_name: static
     volumes:
-    - ./config/nginx.dev.conf:/etc/nginx/nginx.conf
-    - ./logs/nginx:/var/log/nginx
-    - "F:/docs/music/mlp/My Little Pony Ost/mlpost:/docs/music/mlpost"
-    - "D:/Documents/Music/MAv16/Artists:/docs/music/mlpfa"
+      - ./config/nginx.dev.conf:/etc/nginx/nginx.conf
+      - ./logs/nginx:/var/log/nginx
+      - "F:/docs/music/mlp/My Little Pony Ost/mlpost:/docs/music/mlpost"
+      - "D:/Documents/Music/MAv16/Artists:/docs/music/mlpfa"
+      #- "/home/tia/docs/music:/docs/music"
     ports:
-    - "80:80"
+      - "2012:80"
     command: nginx -g 'daemon off;'
 
 volumes:
