--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "cross-env": "^5.2.0",
     "drivelist": "^6.4.3",
     "id3js": "^1.1.3",
