--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     image: nginx:1.15.4
     container_name: static
     volumes:
-      - ./config/nginx.dev.conf:/etc/nginx/nginx.conf
+      - ./config/dev.nginx.conf:/etc/nginx/nginx.conf
       - ./logs/nginx:/var/log/nginx
       - "F:/docs/music/mlp/My Little Pony Ost/mlpost:/docs/music/mlpost"
       - "D:/Documents/Music/MAv16/Artists:/docs/music/mlpfa"
