--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cross-env": "^5.2.0",
     "drivelist": "^6.4.3",
     "id3js": "^1.1.3",
+    "js-yaml": "^3.12.0",
     "jsonschema": "^1.2.4",
     "jsonwebtoken": "^8.3.0",
     "koa": "^2.5.3",
