--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "cross-env": "^5.2.0",
     "drivelist": "^6.4.3",
+    "forever": "^0.15.3",
     "id3js": "^1.1.3",
     "js-yaml": "^3.12.0",
     "jsonschema": "^1.2.4",
@@ -25,6 +26,7 @@
     "koa-session-mongoose": "^2.0.5",
     "mongoose": "^5.2.17",
     "node-id3": "^0.1.6",
-    "winston": "^3.1.0"
+    "winston": "^3.1.0",
+    "winston-daily-rotate-file": "^3.4.1"
   }
 }
